[package]
name = "badgen"
version = "0.1.0"
authors = ["avitex <theavitex@gmail.com>"]
edition = "2018"
categories = ["graphics", "no-std"]
description = "Badge generator"
documentation = "https://docs.rs/badgen"
homepage = "https://github.com/avitex/rust-badgen"
repository = "https://github.com/avitex/rust-badgen"
license = "MIT"
readme = "README.md"

[features]
default = ["font-noto-sans"]
pretty = []
font-noto-sans = []

[dependencies]
ryu = "1"
itoa = "0.4"
uluru = { git = "https://github.com/avitex/uluru" }
ttf-parser = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "generation"
harness = false
