[package]
name = "badgen"
version = "0.1.0"
authors = ["avitex <avitex@wfxlabs.com>"]
edition = "2018"
categories = ["graphics", "no-std"]
description = "Fast and configurable badge generator"
documentation = "https://docs.rs/badgen"
homepage = "https://github.com/avitex/rust-badgen"
repository = "https://github.com/avitex/rust-badgen"
license = "MIT"
readme = "README.md"

[features]
default = ["font-noto-sans"]
pretty = []
font-noto-sans = []

[dependencies]
ryu = "1"
itoa = "0.4"
uluru = "1"
ttf-parser = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "generation"
harness = false
